WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267480
PKPaymentMethod fails strict mode decoding when using private label cards
https://bugs.webkit.org/show_bug.cgi?id=267480
Summary
PKPaymentMethod fails strict mode decoding when using private label cards
Abrar Rahman Protyasha
Reported
2024-01-12 18:04:41 PST
When using private label cards (such as the TJX card) with Apple Pay on the web, PKPaymentMethod fails strict mode decoding with this error message: ``` NSKU decode failed for object of classes <private>: value for key 'paymentPass' was of unexpected class 'PKPaymentPass' (0x1de85df38) [/System/Library/PrivateFrameworks/PassKitCore.framework]. Allowed classes are: {( "'PKSecureElementPass' (0x1de864310) [/System/Library/PrivateFrameworks/PassKitCore.framework]" )} ``` We should probably fall back to secure mode for the "WebKit running on macOS down-level" configs that will never see the upstream PassKit fix for this bug.
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-01-12 18:04:46 PST
rdar://120005200
Abrar Rahman Protyasha
Comment 2
2024-01-13 11:07:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22755
EWS
Comment 3
2024-01-16 17:43:13 PST
Committed
273108@main
(96136876b937): <
https://commits.webkit.org/273108@main
> Reviewed commits have been landed. Closing PR #22755 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug