Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm
@@ -453,7 +453,8 @@ static bool shouldEnableStrictMode(Decoder& decoder, const HashSet<Class>& allow
 
 #if HAVE(STRICT_DECODABLE_NSTEXTTABLE) \
     && HAVE(STRICT_DECODABLE_PKCONTACT) \
-    && HAVE(STRICT_DECODABLE_CNCONTACT)
+    && HAVE(STRICT_DECODABLE_CNCONTACT) \
+    && HAVE(STRICT_DECODABLE_PKPAYMENTPASS)
     // Shortcut the following unnecessary Class checks on newer OSes to fix rdar://111926152.
     return true;
 #else
@@ -477,6 +478,7 @@ static bool shouldEnableStrictMode(Decoder& decoder, const HashSet<Class>& allow
             || messageName == IPC::MessageName::AuthenticationManager_CompleteAuthenticationChallenge; // UIP -> NP
     };
 
+#if ENABLE(DATA_DETECTION) || ENABLE(REVEAL)
 #if HAVE(SECURE_ACTION_CONTEXT)
 static constexpr bool haveSecureActionContext = true;
 #else
@@ -504,6 +506,7 @@ static constexpr bool haveSecureActionContext = false;
         && allowedClasses.contains(PAL::getRVItemClass()))
         return haveSecureActionContext;
 #endif // ENABLE(REVEAL)
+#endif // ENABLE(DATA_DETECTION) || ENABLE(REVEAL)
 
 #if ENABLE(APPLE_PAY)
     // rdar://107553480 Don't reintroduce rdar://108235706
@@ -512,10 +515,18 @@ static constexpr bool haveSecureActionContext = false;
 #else
     static constexpr bool haveStrictDecodableCNContact = false;
 #endif
+
+    // rdar://107553480 Don't reintroduce rdar://120005200
+#if HAVE(STRICT_DECODABLE_PKPAYMENTPASS)
+    static constexpr bool haveStrictDecodablePKPaymentPass = true;
+#else
+    static constexpr bool haveStrictDecodablePKPaymentPass = false;
+#endif
+
     if (PAL::isPassKitCoreFrameworkAvailable()
         && PAL::getPKPaymentMethodClass()
         && allowedClasses.contains(PAL::getPKPaymentMethodClass()))
-        return haveStrictDecodableCNContact;
+        return haveStrictDecodableCNContact && haveStrictDecodablePKPaymentPass;
 
     // Don't reintroduce rdar://108660074
 #if HAVE(STRICT_DECODABLE_PKCONTACT)
@@ -527,7 +538,7 @@ static constexpr bool haveSecureActionContext = false;
         && PAL::getPKContactClass()
         && allowedClasses.contains(PAL::getPKContactClass()))
         return haveStrictDecodablePKContact;
-#endif
+#endif // ENABLE(APPLE_PAY)
 
     // rdar://107553230 don't reintroduce rdar://108038436
 #if HAVE(STRICT_DECODABLE_NSTEXTTABLE)
